Custom Hotkeys Dissapear #45579

Closed
opened 2015-07-27 18:05:19 +02:00 by Anton · 8 comments

System Information
OSX 10.9.5 AMD Radeon HD6770M

Blender Version
Broken: 2.7.5 cdf2dbe

Short description of error
Custom Hotkeys Dissapear

Exact steps for others to reproduce the error
1 Change any hotkey in Blender (default) settings
1 Save (Export) custom hotkeys *.py file
2 Load (Import) custom hotkeys *.py file
3 In Hotkeys List -changed hotkey shall dissapear

Crutch: need to press any restore in Blender(default) settings before load custom *.py file

**System Information** OSX 10.9.5 AMD Radeon HD6770M **Blender Version** Broken: 2.7.5 cdf2dbe **Short description of error** Custom Hotkeys Dissapear **Exact steps for others to reproduce the error** 1 Change any hotkey in *Blender (default)* settings 1 Save (Export) custom hotkeys *.py file 2 Load (Import) custom hotkeys *.py file 3 In Hotkeys List -changed hotkey shall dissapear Crutch: need to press any *restore* in Blender(default) settings before load custom *.py file
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AntohaRDNS

Added subscriber: @AntohaRDNS

#45585 was marked as duplicate of this issue

#45585 was marked as duplicate of this issue

Added subscribers: @Sergey, @Rawr

Added subscribers: @Sergey, @Rawr

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42

@mont29, @ideasman42, afraid it's another one which you should know better..

@mont29, @ideasman42, afraid it's another one which you should know better..
Bastien Montagne self-assigned this 2015-09-11 15:01:26 +02:00

This issue was referenced by 6212eb2845

This issue was referenced by 6212eb2845048527bbf5c4afbe76bf06aab60a62

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45579
No description provided.